--- a/css/styles.css
+++ b/css/styles.css
@@ -50,19 +50,15 @@ body {
 #carouselButton {
   right: 0px;
   position: absolute;
-<<<<<<< HEAD
   bottom: 0px;
   z-index: 1; }
-=======
-  top: 0;
-  left: 0;
-  min-height: 300px;
-}
 
-#carouselButton {
-  right:0px;
-  position:absolute;
-  bottom: 0px;
-  z-index: 1;
-}
->>>>>>> 0ff847e7e42e10a56baeb654308b79d8a5c586f5
+.modal-header {
+  background: #512DA8; }
+  .modal-header .modal-title {
+    color: floralwhite; }
+
+.modal-body {
+  background: #D1C4E9; }
+  .modal-body .cancelbtn {
+    color: floralwhite; }
